# demarc

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  demarc.md  makedemo.py  run-win.sh  vice_x64sc_libretro.dylib
assets/shaders/: dim.wgsl  lottes.wgsl
demos/: natrium.prg  quantum_icc2026_v1p.prg  rebels.adf
demos/o2-intro/: o2intro
demos/o2-intro/s/: startup-sequence
demos/shaders/: lottes.wgsl
docs/: NOTES.md  TODO.md  flags.md
src/: audio.rs  commands.rs  emulator.rs  fetch.rs  hud.rs  libloader.rs  libretro.rs  main.rs  media_keys.rs  post_process.rs  record.rs  retro.rs  retro_emu.rs  retro_log_shim.c  screensaver.rs  text_input.rs  utils.rs
testdata/: vS10-ami.lha
testdata/intros/0/: 007-01.prg  1200club-01.prg  1404-01.prg  1541duo-01.prg  1999-01.prg  86ers-01.prg  86ers-02.prg
testdata/intros/a/: aab-01.prg  aas-01.prg  aas-02.prg  aas-03.prg  aycee-01.prg  azoo-01.prg  azoo-02.prg  azoo-03.prg
