[package]
name = "rupix"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1"

[dependencies]
bevy = { version = "0.18.1", features = ["file_watcher"] }
rand = "0.10.1"
libloading = "0.8"
cpal = "0.15.3"
tracing = "0.1.44"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.23"
ringbuf = "0.5.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
