[package]
name = "demarc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1"

[dependencies]
bevy = { version = "0.18.1", features = ["file_watcher"] }
rand = "0.10.1"
libloading = "0.8"
cpal = "0.15.3"
rubato = "0.16"
tracing = "0.1.44"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.23"
ringbuf = "0.5.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
bevy_tweening = "0.15.0"
zip = { version = "8", default-features = false, features = ["deflate"] }
# Matches the wgpu version Bevy 0.18 uses; only needed to name `SamplerBorderColor`,
# which Bevy doesn't re-export.
wgpu = "27"
tempfile = "3.27.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Inhibit the freedesktop screen saver over D-Bus while running fullscreen.
zbus = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 2
