[package]
name = "demarc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"

[dependencies]
bevy = { version = "0.19.0", features = ["file_watcher"] }
rand = "0.10.1"
libloading = "0.9"
cpal = "0.15.3"
rubato = "0.16"
tracing = "0.1.44"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.23"
ringbuf = "0.5.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "color"] }
zip = { version = "8", default-features = false, features = [
    "deflate",
    "deflate64",
] }
# Matches the wgpu version Bevy 0.19 uses; only needed to name `SamplerBorderColor`,
# which Bevy doesn't re-export.
wgpu = "29"
tempfile = "3.27.0"
fatfs = "0.3.6"
dirs = "6.0.0"
ureq = "3"
delharc = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Inhibit the freedesktop screen saver over D-Bus while running fullscreen, and
# expose an MPRIS media-player interface so media keys control the emulator.
zbus = { version = "5", features = ["tokio"] }
# Runtime that drives the MPRIS D-Bus listener in src/media_keys.rs.
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 2
